--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Efe-Arslan-Portfolio</title>
+  <title>Efe Arslan | Full Stack Developer & Researcher</title>
+  <meta name="description"
+    content="Portfolio of Efe Arslan - Full Stack Developer & Researcher specializing in AI, Formal Verification, and Modern Web Technologies." />
+  <meta property="og:title" content="Efe Arslan | Portfolio" />
+  <meta property="og:description" content="Discover my projects in AI, Web Development, and Mathematical Research." />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
